# CelestronOriginMonitor

./: .gitignore  AlignmentController.cpp  AlignmentController.hpp  AlignmentTab.cpp  AlignmentTab.hpp  AlpacaServer.cpp  AlpacaServer.hpp  AutopilotController.cpp  AutopilotController.hpp  AutopilotTab.cpp  AutopilotTab.hpp  BUILD_LINUX.md  BUILD_WINDOWS.md  Build_Error_Fixes.md  CMakeLists.txt  CelestronOriginMonitor.pro  CometObserver.cpp  CometObserver.hpp  CometTracker.cpp  CometTracker.hpp  CommandInterface.cpp  CompleteCameraExample.cpp  CoordinateUtils.cpp  EMERGENCY_FIX_README.md  ImageAnalyzer.cpp  ImageAnalyzer.hpp  Info.plist  InfoPlist_Fix_Guide.md  JsonMonitorTab.cpp  JsonMonitorTab.hpp  LaunchScreen.storyboard  LocationEntryDialog.cpp  LocationEntryDialog.h  LocationManager.cpp  LocationManager.h  LogReplayDialog.cpp  LogReplayDialog.hpp  Makefile.qmake  MessierCatalog.h  MessierCatalog.hpp  (+24 more)
.github/workflows/: linux-deb.yml
CelestronOriginMonitor.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
CelestronOriginMonitor.xcodeproj/xcshareddata/xcschemes/: CelestronOriginMonitor.xcscheme
cmake/: FindStellarSolver.cmake  PackageDeb.cmake
packaging/: build-deb-qmake.sh  relax-stellarsolver-dep.sh
